# convergio-voice

./: .claudeignore  .env.example  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONSTITUTION.md  Cargo.toml  LICENSE  README.md  deny.toml  release-please-config.json
.claude/: settings.json
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  lockfile-update.yml  release.yml
crates/convergio-voice/: Cargo.toml
crates/convergio-voice/src/: audio_util.rs  ext.rs  intent.rs  lib.rs  mcp_defs.rs  routes.rs  tests.rs  tts.rs  tts_backends.rs  types.rs  wake_word.rs  whisper.rs
crates/convergio-voice/tests/: e2e_voice_api.rs  e2e_voice_core.rs
docs/adr/: 001-extraction.md
