[package]
name = "convergio-voice"
description = "STT/TTS engine — standalone audio processing for Convergio"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
convergio-types = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true }
